Fixing the default visibility issue on the summary section and hiding the code section until it has results.
* web/lib/main.js:
    - Added code to fetchURL that makes the '#html-results' section visible
      after a value is set.

* web/stylesheets/main.css:
    - Added default visibility as hidden to the '#html-results' section.
    - Fixed a CSS issue with div.summary.

--- a/web/stylesheets/main.css
+++ b/web/stylesheets/main.css
@@ -24,9 +24,11 @@ div.code {
 
     overflow-wrap: break-word;
     word-wrap: break-word;
+
+    visibility: hidden;
 }
 
-.summary div {
+div.summary {
     visibility: hidden;
 }
 
